--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath ProjectConfig.KOTLIN_GRADLE_PLUGIN
         classpath ProjectConfig.ANDROID_JUNIT5
         classpath ProjectConfig.HILT_ANDROID_GRADLE_PLUGIN
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
     }
 }
 
