--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "CleanArchitectureStudy_module_integration"
 include ':app'
-include ':common'
+include ':common:ui'
