[수정] viewBinding 삭제 후 dataBinding 추가
BaseAdapter 추가
BaseViewHolder 추가
android.gradle 수정

--- a/android.gradle
+++ b/android.gradle
@@ -25,12 +25,13 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding = true
+        dataBinding = true
     }
 }
 
 dependencies {
     implementation AndroidXConfig.APPCOMPAT
+    implementation GoogleConfig.MATERIAL
     implementation AndroidXConfig.CORE_KTX
 
     implementation CoroutineConfig.ANDROID
