--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ dependencies {
 
     implementation project(path: ':common:ui')
 
-    implementation JetBrain.KOTLIN_STDLIB
     implementation AndroidXConfig.CORE_KTX
     implementation AndroidXConfig.APPCOMPAT
     implementation GoogleConfig.MATERIAL
@@ -88,13 +87,13 @@ dependencies {
     implementation CoroutineConfig.ANDROID
     testImplementation CoroutineConfig.TEST
 
-    api NetworkConfig.RETROFIT
-    api NetworkConfig.LOGGING_INTERCEPTOR
-    api NetworkConfig.CONVERTER_MOSHI
+    implementation NetworkConfig.RETROFIT
+    implementation NetworkConfig.LOGGING_INTERCEPTOR
+    implementation NetworkConfig.CONVERTER_MOSHI
 
-    api NetworkConfig.MOSHI_KOTLIN
+    implementation NetworkConfig.MOSHI_KOTLIN
     kapt NetworkConfig.MOSHI_KOTLIN_CODEGEN
-    api NetworkConfig.MOSHI_ADAPTERS
+    implementation NetworkConfig.MOSHI_ADAPTERS
 
     implementation LogConfig.TIMBER
 
