--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath ProjectConfig.GRADLE
-        classpath ProjectConfig.KOTLIN_GRADLE_PLUGIN
-        classpath ProjectConfig.ANDROID_JUNIT5
-        classpath ProjectConfig.HILT_ANDROID_GRADLE_PLUGIN
+        classpath ProjectConfig.gradle
+        classpath ProjectConfig.kotlinGradlePlugin
+        classpath ProjectConfig.androidJunit5
+        classpath ProjectConfig.hiltAndroidGradlePlugin
     }
 }
 
