[UI/구현] ConcatAdapter를 사용합니다.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation AndroidXConfig.lifecycleRuntime
     implementation AndroidXConfig.lifecycleLivedata
     implementation AndroidXConfig.viewpager2
-
+    implementation AndroidXConfig.recyclerView
 
     testImplementation TestConfig.junitJupiterApi
     testRuntimeOnly TestConfig.junitJupiterEngine
