[추가] feature 모듈 추가
TODO : moviesearcher 이관

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ dependencyResolutionManagement {
 rootProject.name = "CleanArchitectureStudy_module_integration"
 include ':app'
 include ':common:ui'
+include ':feature:movie'
