[수정] feature movie Module 로 이관

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ android {
 dependencies {
 
     implementation project(path: ':common:ui')
+    implementation project(path: ':feature:movie')
 
     implementation AndroidXConfig.coreKtx
     implementation AndroidXConfig.appcompat
