--- a/feature/movie/src/main/AndroidManifest.xml
+++ b/feature/movie/src/main/AndroidManifest.xml
@@ -2,4 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chan.movie">
 
+    <application>
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:theme="@style/Theme.CleanArchitectureStudy.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
 </manifest>
