--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -1,42 +1,88 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'de.mannodermaus.android-junit5'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdk 31
+    compileSdk AndroidConfig.compileSdk
 
     defaultConfig {
-        minSdk 26
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        minSdk AndroidConfig.minSdk
+        targetSdk AndroidConfig.targetSdk
+        versionCode AndroidConfig.versionCode
+        versionName AndroidConfig.versionName
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        testInstrumentationRunner AndroidConfig.androidJunitRunner
+        testInstrumentationRunnerArgument AndroidConfig.runnerBuilder, AndroidConfig.androidJunit5Builder
+
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        dataBinding true
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation project(path: ':common:ui')
+
+    implementation AndroidXConfig.coreKtx
+    implementation AndroidXConfig.appcompat
+    implementation GoogleConfig.material
+    implementation AndroidXConfig.constraintLayout
+    implementation AndroidXConfig.activityKtx
+    implementation AndroidXConfig.fragmentKtx
+
+    implementation AndroidXConfig.lifecycleViewModel
+    implementation AndroidXConfig.lifecycleRuntime
+    implementation AndroidXConfig.lifecycleLivedata
+    implementation AndroidXConfig.viewpager2
+    implementation AndroidXConfig.recyclerView
+
+    testImplementation TestConfig.junitJupiterApi
+    testRuntimeOnly TestConfig.junitJupiterEngine
+    testImplementation TestConfig.junitJupiterParams
+    testImplementation TestConfig.assertjCore
+    testImplementation TestConfig.mockk
+
+    androidTestImplementation TestConfig.testCore
+    androidTestImplementation TestConfig.coreTesting
+    androidTestImplementation TestConfig.junitJupiterApi
+    androidTestImplementation TestConfig.assertjCore
+    androidTestImplementation TestConfig.androidTestCore
+    androidTestRuntimeOnly TestConfig.androidTestRunner
+
+    implementation DaggerHiltConfig.android
+    kapt DaggerHiltConfig.compiler
+
+    implementation CoroutineConfig.core
+    implementation CoroutineConfig.android
+    testImplementation CoroutineConfig.test
+
+    api NetworkConfig.retrofit
+    api NetworkConfig.loggingInterceptor
+    api NetworkConfig.converterMoshi
+
+    api NetworkConfig.moshiKotlin
+    kapt NetworkConfig.moshiKotlinCodegen
+    api NetworkConfig.moshiAdapters
+
+    implementation LogConfig.timber
+
+    implementation Glide.glide
+    kapt Glide.compiler
 }
