--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -26,7 +26,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
     buildFeatures {
         dataBinding true
@@ -40,38 +40,26 @@ dependencies {
 
     implementation project(path: ':common:ui')
 
-    implementation AndroidXConfig.coreKtx
     implementation AndroidXConfig.appcompat
+    implementation AndroidXConfig.coreKtx
     implementation GoogleConfig.material
     implementation AndroidXConfig.constraintLayout
     implementation AndroidXConfig.activityKtx
     implementation AndroidXConfig.fragmentKtx
 
-    implementation AndroidXConfig.lifecycleViewModel
-    implementation AndroidXConfig.lifecycleRuntime
-    implementation AndroidXConfig.lifecycleLivedata
     implementation AndroidXConfig.viewpager2
     implementation AndroidXConfig.recyclerView
 
-    testImplementation TestConfig.junitJupiterApi
-    testRuntimeOnly TestConfig.junitJupiterEngine
-    testImplementation TestConfig.junitJupiterParams
-    testImplementation TestConfig.assertjCore
-    testImplementation TestConfig.mockk
-
-    androidTestImplementation TestConfig.testCore
-    androidTestImplementation TestConfig.coreTesting
-    androidTestImplementation TestConfig.junitJupiterApi
-    androidTestImplementation TestConfig.assertjCore
+    implementation TestConfig.junitJupiterApi
+    implementation TestConfig.junitJupiterEngine
     androidTestImplementation TestConfig.androidTestCore
     androidTestRuntimeOnly TestConfig.androidTestRunner
+    implementation TestConfig.mockk
 
     implementation DaggerHiltConfig.android
     kapt DaggerHiltConfig.compiler
 
     implementation CoroutineConfig.core
-    implementation CoroutineConfig.android
-    testImplementation CoroutineConfig.test
 
     api NetworkConfig.retrofit
     api NetworkConfig.loggingInterceptor
