[수정] moshi to gson
kotlin version 1.6.0 설정시 빌드간
moshi warnning 문제로 Gson으로 교체함

--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -63,11 +63,7 @@ dependencies {
 
     api NetworkConfig.retrofit
     api NetworkConfig.loggingInterceptor
-    api NetworkConfig.converterMoshi
-
-    api NetworkConfig.moshiKotlin
-    kapt NetworkConfig.moshiKotlinCodegen
-    api NetworkConfig.moshiAdapters
+    api NetworkConfig.gsonConverter
 
     implementation LogConfig.timber
 
