--- a/android.gradle
+++ b/android.gradle
@@ -41,16 +41,13 @@ dependencies {
     implementation AndroidXConfig.activityKtx
     implementation AndroidXConfig.fragmentKtx
 
-    implementation CoroutineConfig.android
+    implementation CoroutineConfig.core
 
     testImplementation TestConfig.junitJupiterApi
     testRuntimeOnly TestConfig.junitJupiterEngine
-    testImplementation TestConfig.junitJupiterParams
     testImplementation TestConfig.assertjCore
     testImplementation TestConfig.mockk
 
-    androidTestImplementation TestConfig.testCore
-    androidTestImplementation TestConfig.coreTesting
     androidTestImplementation TestConfig.junitJupiterApi
     androidTestImplementation TestConfig.assertjCore
     androidTestImplementation TestConfig.androidTestCore
