[추가] - Turbine 디펜던시 추가 및 테스트 코드 작성

--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation DaggerHiltConfig.android
     kapt DaggerHiltConfig.compiler
 
+    testImplementation TestConfig.turbine
+
     api NetworkConfig.retrofit
     api NetworkConfig.loggingInterceptor
     api NetworkConfig.gsonConverter
