[추가] - buildSrc 방식을 사용할 때 버전 업데이트를 확인하는 방법

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'de.mannodermaus.android-junit5'
     id 'dagger.hilt.android.plugin'
+    id 'com.github.ben-manes.versions'
 }
 
 apply from: '../jacoco.gradle'
