--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: "com.github.ben-manes.versions"
+
 buildscript {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
         classpath ProjectConfig.gradle
         classpath ProjectConfig.kotlinGradlePlugin
         classpath ProjectConfig.androidJunit5
         classpath ProjectConfig.hiltAndroidGradlePlugin
+        classpath ProjectConfig.gradleVersionPlugin
     }
 }
 
