[구현] - SavedStateHandle 적용 : ViewModel은 메모리 내에서 존재하므로 프로세스 종료까지는 안전하지 않습니다
- 테스트 방법 : 앱을 홈으로 내린 후 adb shell am kill [패키지명]

--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'de.mannodermaus.android-junit5'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 apply from: "../feature.gradle"
@@ -12,6 +13,7 @@ dependencies {
 
     implementation AndroidXConfig.viewpager2
     implementation AndroidXConfig.recyclerView
+    implementation AndroidXConfig.viewmodelSavedstate
 
     implementation DaggerHiltConfig.android
     kapt DaggerHiltConfig.compiler
