--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -9,6 +9,16 @@ plugins {
 
 apply from: "../feature.gradle"
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+android {
+    defaultConfig {
+        buildConfigField "String", "NAVER_CLIENT_ID", properties['naver_client_id']
+        buildConfigField "String", "NAVER_CLIENT_SECRET", properties['naver_client_secret']
+    }
+}
+
 dependencies {
 
     implementation AndroidXConfig.viewpager2
