[수정] - 패키지명 gradle 로 이관

--- a/feature/splash/build.gradle
+++ b/feature/splash/build.gradle
@@ -6,3 +6,9 @@ plugins {
 }
 
 apply from: "../feature.gradle"
+
+android {
+    defaultConfig {
+        buildConfigField "String", "MAIN_ACTIVITY", '"com.chan.movie.ui.main.MainActivity"'
+    }
+}
