[수정] - 인트로화면 launchWhenCreated 제거

--- a/feature/feature.gradle
+++ b/feature/feature.gradle
@@ -3,4 +3,6 @@ apply from: "../../android.gradle"
 dependencies {
     implementation project(":common:ui")
     implementation project(":common:util")
+
+    implementation LogConfig.timber
 }
