[수정] - Build.gradle 테스트 디펜던시 복원
jacoco 생성 관련 테스트 필요

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'de.mannodermaus.android-junit5'
     id 'dagger.hilt.android.plugin'
     id 'com.github.ben-manes.versions'
 }
@@ -19,6 +20,7 @@ android {
         versionName AndroidConfig.versionName
 
         testInstrumentationRunner AndroidConfig.androidJunitRunner
+        testInstrumentationRunnerArgument AndroidConfig.runnerBuilder, AndroidConfig.androidJunit5Builder
 
     }
 
@@ -43,6 +45,9 @@ android {
     buildFeatures {
         dataBinding true
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -54,6 +59,11 @@ dependencies {
     implementation AndroidXConfig.coreKtx
     implementation AndroidXConfig.appcompat
     implementation GoogleConfig.material
+
+    implementation TestConfig.junitJupiterApi
+    implementation TestConfig.junitJupiterEngine
+    androidTestImplementation TestConfig.androidTestCore
+    androidTestRuntimeOnly TestConfig.androidTestRunner
 
     implementation DaggerHiltConfig.android
     kapt DaggerHiltConfig.compiler
