[추가] - DataBinding 또는 ViewBinding 사용시 메모리 누수
- BaseFragment.kt 삭제
- Binding 관련 Dependencies.kt 추가

[참조](https://github.com/androidbroadcast/ViewBindingPropertyDelegate)

--- a/feature/feature.gradle
+++ b/feature/feature.gradle
@@ -4,5 +4,6 @@ dependencies {
     implementation project(":common:ui")
     implementation project(":common:util")
 
+    implementation ViewBindingConfig.viewBindingPropertyDelegateNoReflection
     implementation LogConfig.timber
 }
