--- a/feature/splash/src/main/AndroidManifest.xml
+++ b/feature/splash/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.chan.splash">
 
     <application>
-        <activity android:name=".SplashActivity">
+        <activity android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
