[추가] - Use jetpack app startup library to reduce application startup time

--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation AndroidXConfig.viewpager2
     implementation AndroidXConfig.recyclerView
     implementation AndroidXConfig.viewModelSavedState
+    implementation AndroidXConfig.startUp
 
     api DaggerHiltConfig.android
     kapt DaggerHiltConfig.compiler
