--- a/feature/movie/src/main/AndroidManifest.xml
+++ b/feature/movie/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.chan.movie">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,6 +9,17 @@
         <activity
             android:name=".ui.main.MainActivity">
         </activity>
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+
+            <!-- This entry makes ExampleLoggerInitializer discoverable. -->
+            <meta-data  android:name="com.chan.movie.data.SearchManagerInitializer"
+                android:value="androidx.startup" />
+
+        </provider>
     </application>
 
 </manifest>
