[해결] - App Startup의 용도에 맞게 사용하자
- 불필요한 테스트 코드 삭제
- SecondInitializer 를 추가하여 종속성을 통한 초기화 코드 순서 처리

--- a/feature/movie/src/main/AndroidManifest.xml
+++ b/feature/movie/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             tools:node="merge">
 
             <!-- This entry makes ExampleLoggerInitializer discoverable. -->
-            <meta-data  android:name="com.chan.movie.data.SearchManagerInitializer"
+            <meta-data  android:name="com.chan.movie.data.SecondInitializer"
                 android:value="androidx.startup" />
 
         </provider>
